--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm install
 
       - name: semantic-release
-        run: |
-          npx semantic-release
-          env:
-            GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npx semantic-release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
