--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@semantic-release/github": "^7.1.1",
     "@semantic-release/npm": "^7.0.6",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "gulp": "^4.0.2",
     "gulp-unzip": "^1.1.0",
     "mocha": "^8.2.1",
