--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "should": "^13.2.3",
     "stream-assert": "^2.0.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
