--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "archiver": "^5.0.2",
     "concat-stream": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "through2": "^4.0.2"
+    "plugin-error": "^1.0.1",
+    "through2": "^4.0.2",
+    "vinyl": "^2.2.1"
   },
   "devDependencies": {
     "@semantic-release/github": "^7.1.1",
